# ODEStuff

./: .clang-format  .gitignore  CMakeLists.txt  cpptest.cpp  gentruth.py  plot.py  pythontest.py
cmake/: GitExternal.cmake
odelib/: CMakeLists.txt
odelib/inc/: odesolver.h  solver_bdf.h  solver_euler.h  solver_radau.h  solver_rk.h
odelib/src/: odesolver.cpp  solver_bdf.cpp  solver_euler.cpp  solver_radau.cpp  solver_rk.cpp  vector_math.h
test/: CMakeLists.txt
test/src/: ginacode.cpp  ginactest.cpp  main.cpp
